crates/kata-inference/tests/snapshots/tast_snapshot__tast_lambda_clauses.snap
---
source: crates/kata-inference/tests/tast_snapshot.rs
expression: tast_snapshot(src)
---
=== Entry ===
  ty: Unit
  kind: ActionCall { callee: "main", args: Spanned { node: TypedExpr { span: Span { offset: 90, line: 8, col: 6, len: 1 }, ty: Unit, tail_pos: false, escape: Caller, kind: Unit }, span: Span { offset: 90, line: 8, col: 6, len: 1 } }, caller_arena: 0, ffi_symbol: None, indirect_callee: None }

=== Functions ===
  != :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  != :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  != :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  != :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  != :: [Prim(Text), Prim(Text)] => Sum("Boolean")
  * :: [Prim(Float), Prim(Int)] => Prim(Float)
  * :: [Prim(Float), Prim(Rational)] => Prim(Float)
  * :: [Prim(Rational), Prim(Int)] => Prim(Rational)
  * :: [Prim(Rational), Prim(Float)] => Prim(Rational)
  + :: [Prim(Float), Prim(Int)] => Prim(Float)
  + :: [Prim(Float), Prim(Rational)] => Prim(Float)
  + :: [Prim(Rational), Prim(Int)] => Prim(Rational)
  + :: [Prim(Rational), Prim(Float)] => Prim(Rational)
  - :: [Prim(Float), Prim(Int)] => Prim(Float)
  - :: [Prim(Float), Prim(Rational)] => Prim(Float)
  - :: [Prim(Rational), Prim(Int)] => Prim(Rational)
  - :: [Prim(Rational), Prim(Float)] => Prim(Rational)
  / :: [Prim(Float), Struct(Instance("NonZero", "Int"))] => Prim(Float)
  / :: [Prim(Float), Struct(Instance("NonZero", "Rational"))] => Prim(Float)
  / :: [Prim(Rational), Struct(Instance("NonZero", "Int"))] => Prim(Rational)
  / :: [Prim(Rational), Struct(Instance("NonZero", "Float"))] => Prim(Rational)
  // :: [Prim(Float), Struct(Instance("NonZero", "Int"))] => Prim(Int)
  // :: [Prim(Float), Struct(Instance("NonZero", "Rational"))] => Prim(Int)
  // :: [Prim(Float), Struct(Instance("NonZero", "Float"))] => Prim(Int)
  // :: [Prim(Rational), Struct(Instance("NonZero", "Int"))] => Prim(Int)
  // :: [Prim(Rational), Struct(Instance("NonZero", "Float"))] => Prim(Int)
  // :: [Prim(Rational), Struct(Instance("NonZero", "Rational"))] => Prim(Int)
  < :: [Prim(Int), Prim(Float)] => Sum("Boolean")
  < :: [Prim(Int), Prim(Rational)] => Sum("Boolean")
  < :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  < :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  < :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  < :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  <= :: [Prim(Int), Prim(Float)] => Sum("Boolean")
  <= :: [Prim(Int), Prim(Rational)] => Sum("Boolean")
  <= :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  <= :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  <= :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  <= :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  = :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  = :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  = :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  = :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  > :: [Prim(Int), Prim(Float)] => Sum("Boolean")
  > :: [Prim(Int), Prim(Rational)] => Sum("Boolean")
  > :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  > :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  > :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  > :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  >= :: [Prim(Int), Prim(Float)] => Sum("Boolean")
  >= :: [Prim(Int), Prim(Rational)] => Sum("Boolean")
  >= :: [Prim(Float), Prim(Int)] => Sum("Boolean")
  >= :: [Prim(Float), Prim(Rational)] => Sum("Boolean")
  >= :: [Prim(Rational), Prim(Int)] => Sum("Boolean")
  >= :: [Prim(Rational), Prim(Float)] => Sum("Boolean")
  _log_tag :: [Sum("LogLevel")] => Prim(Int)
  abs :: [Prim(Int)] => Prim(Int)
  abs :: [Prim(Float)] => Prim(Float)
  abs :: [Prim(Rational)] => Prim(Rational)
  and :: [Sum("Boolean"), Sum("Boolean")] => Sum("Boolean")
  div :: [Prim(Int), Prim(Int)] => Generic("Result", [Prim(Int), Prim(Text)])
  div :: [Prim(Float), Prim(Float)] => Generic("Result", [Prim(Float), Prim(Text)])
  div :: [Prim(Float), Prim(Int)] => Generic("Result", [Prim(Float), Prim(Text)])
  div :: [Prim(Float), Prim(Rational)] => Generic("Result", [Prim(Float), Prim(Text)])
  div :: [Prim(Rational), Prim(Rational)] => Generic("Result", [Prim(Rational), Prim(Text)])
  div :: [Prim(Rational), Prim(Int)] => Generic("Result", [Prim(Rational), Prim(Text)])
  div :: [Prim(Rational), Prim(Float)] => Generic("Result", [Prim(Rational), Prim(Text)])
  dobro :: [Prim(Int)] => Prim(Int)
  float :: [Byte] => Prim(Float)
  is_neutral :: [Prim(Int)] => Sum("Boolean")
  is_neutral :: [Prim(Float)] => Sum("Boolean")
  max :: [Var("A"), Var("A")] => Var("A")
  min :: [Var("A"), Var("A")] => Var("A")
  mod :: [Prim(Int), Struct(Instance("NonZero", "Int"))] => Prim(Int)
  mod :: [Prim(Float), Struct(Instance("NonZero", "Float"))] => Prim(Float)
  mod :: [Prim(Float), Struct(Instance("NonZero", "Int"))] => Prim(Float)
  mod :: [Prim(Float), Struct(Instance("NonZero", "Rational"))] => Prim(Float)
  mod :: [Prim(Rational), Struct(Instance("NonZero", "Rational"))] => Prim(Rational)
  mod :: [Prim(Rational), Struct(Instance("NonZero", "Int"))] => Prim(Rational)
  mod :: [Prim(Rational), Struct(Instance("NonZero", "Float"))] => Prim(Rational)
  not :: [Sum("Boolean")] => Sum("Boolean")
  or :: [Sum("Boolean"), Sum("Boolean")] => Sum("Boolean")
  show :: [Prim(Text)] => Prim(Text)
  show :: [Unit] => Prim(Text)
  step :: [Prim(Int)] => Prim(Int)
  step :: [Prim(Float)] => Prim(Float)
  zero :: [Prim(Int)] => Prim(Int)
  zero :: [Prim(Float)] => Prim(Float)
  zero :: [Prim(Rational)] => Prim(Rational)

=== Actions ===
  echo :: [Interface("SHOW")] => Unit
  echo :: [Interface("SHOW"), Prim(Text)] => Unit
  echo :: [Interface("SHOW"), File] => Unit
  echo :: [Interface("SHOW"), Socket] => Unit
  log :: [Sum("LogLevel"), Prim(Text)] => Unit
  log :: [Sum("LogLevel"), Prim(Text), Prim(Text)] => Unit
  log :: [Sum("LogLevel"), Prim(Text), Prim(Text), Prim(Text)] => Unit
  log :: [Sum("LogLevel"), Prim(Text), File] => Unit
  main :: [] => Unit
